dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/mcrux/MCrux.h)
AC_PREFIX_DEFAULT("/usr/local")
AM_INIT_AUTOMAKE(mcrux, 0.2.0)

AC_DISABLE_STATIC

dnl Check for debug mode
CXXFLAGS=""
AC_ARG_ENABLE(debug,
[ --enable-debug                        enable debugging ],
[
if test $enableval != "no";
then
	AC_DEFINE(DEBUG)
  CXXFLAGS="-g"

fi ], [
  AC_DEFINE(DEBUG)
  CXXFLAGS="-g"
])

AC_DEFINE_UNQUOTED(KERNEL, "$KERNEL")

CXXFLAGS="$CXXFLAGS -Wall -I/usr/include/libxml2 -I/usr/include/webkit-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0"

SUBDIRS="lib"
SUBDIRS="$SUBDIRS include"
SUBDIRS="$SUBDIRS bin"
LDADDS="../lib/libmcrux_common.la"
LDADDS="$LDADDS ../lib/window/libmcrux_window.la"
LDADDS="$LDADDS ../lib/abstract/libmcrux_abstract.la"
AC_SUBST(SUBDIRS)
AC_SUBST(LDADDS)
dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(c,main)
AC_CHECK_LIB(pthread,pthread_create,,AC_MSG_ERROR(glibc-dev not installed))
AC_CHECK_LIB(dl,dlopen,,AC_MSG_ERROR(glibc-dev not installed))
AC_CHECK_LIB(glib-2.0,g_free,,AC_MSG_ERROR(libglib2.0-dev not installed))
AC_CHECK_LIB(gtk-x11-2.0,gtk_init,,AC_MSG_ERROR(libgtk-x11-2.0-dev not installed))
AC_CHECK_LIB(xml2,xmlGetPredefinedEntity,,AC_MSG_ERROR(libxml2-dev is not installed))
AC_CHECK_LIB(cairo, cairo_create, ,AC_MSG_ERROR(cairo-dock-dev is not installed))
AC_CHECK_LIB(m, gdk_cairo_create, ,AC_MSG_ERROR(gdk_cairo is not installed))
AC_CHECK_LIB(webkit-1.0,webkit_web_view_set_zoom_level,,AC_MSG_ERROR(webkit-1.0 is not installed))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(socket strdup)

AC_OUTPUT(include/Makefile
include/mcrux/Makefile
lib/Makefile
lib/abstract/Makefile
lib/window/Makefile
bin/Makefile
Makefile)
