dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/MCrux.h)
AC_PREFIX_DEFAULT("/usr")
AM_INIT_AUTOMAKE(mcrux, 0.2.0)

AC_DISABLE_STATIC

dnl Check for debug mode
CXXFLAGS=""
AC_ARG_ENABLE(debug,
[ --enable-debug                        enable debugging ],
[
if test $enableval != "no";
then
	AC_DEFINE(DEBUG)
  CXXFLAGS="-g"

fi ], [
  AC_DEFINE(DEBUG)
  CXXFLAGS="-g"
])

AC_DEFINE_UNQUOTED(KERNEL, "$KERNEL")

CXXFLAGS="$CXXFLAGS -Wall"

SUBDIRS="bin"
#SUBDIRS="$SUBDIRS linux"
LDADDS=""
AC_SUBST(SUBDIRS)
AC_SUBST(LDADDS)
dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(c,main)
AC_CHECK_LIB(pthread,pthread_create,,AC_MSG_ERROR(glibc-devel not installed))
AC_CHECK_LIB(dl,dlopen,,AC_MSG_ERROR(glibc-devel not installed))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(socket strdup)

AC_OUTPUT(bin/Makefile Makefile)
