## Process this file with automake to produce Makefile.in

INCLUDES = -I@top_srcdir@/lib

SUBDIRS = .

noinst_HEADERS = \
	MCruxWindowConfiguration.h \
	MCruxQTWindow.h \
	MCruxWindowManager.h

lib_LTLIBRARIES = libmcrux_window.la

libmcrux_window_la_SOURCES = \
	MCruxWindowConfiguration.cpp \
	MCruxQTWindow.cpp \
	MCruxWindowManager.cpp

